// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox snapshots checked state 1`] = `
<div>
  <div
    class="css-1x6zjrv-Wrapper e14pn5ur2"
  >
    <input
      checked=""
      class="css-c0rrkd-HiddenInput-HiddenInput e14pn5ur1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="css-u1o78x-StyledCheckbox-StyledCheckbox e14pn5ur0"
    >
      <svg
        data-test-id="icon-check-mark"
        fill="currentColor"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M6.19,14.51a.77.77,0,0,1-.57-.25l-4.2-4.8a.75.75,0,0,1,1.13-1l3.56,4.06L13.36,1.82a.75.75,0,0,1,1-.21.76.76,0,0,1,.21,1.05L6.81,14.18a.73.73,0,0,1-.58.33Z"
        />
      </svg>
    </div>
    <span
      class="css-at526y-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Checkbox snapshots indeterminate state 1`] = `
<div>
  <div
    class="css-1x6zjrv-Wrapper e14pn5ur2"
  >
    <input
      class="css-4npmde-HiddenInput-HiddenInput e14pn5ur1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="css-u1o78x-StyledCheckbox-StyledCheckbox e14pn5ur0"
    >
      <svg
        data-test-id="icon-subtract"
        fill="currentColor"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M14,8.75H2a.75.75,0,0,1,0-1.5H14a.75.75,0,0,1,0,1.5Z"
        />
      </svg>
    </div>
    <span
      class="css-at526y-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Checkbox snapshots unchecked state 1`] = `
<div>
  <div
    class="css-bphz7d-Wrapper e14pn5ur2"
  >
    <input
      class="css-4npmde-HiddenInput-HiddenInput e14pn5ur1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="css-5y1i99-StyledCheckbox-StyledCheckbox e14pn5ur0"
    />
    <span
      class="css-vul34l-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
      role="presentation"
    />
  </div>
</div>
`;
